--- a/day3-array-fn-string-async/back/package.json
+++ b/day3-array-fn-string-async/back/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "day3-async",
+  "name": "day3-array-fn-string-async",
   "version": "1.0.0",
   "description": "",
-  "main": "async.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "node-fetch": "^2.6.0"
-  }
+  "license": "ISC"
 }
