--- a/day5-fs/package.json
+++ b/day5-fs/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "devinwangday",
-  "version": "1.0.2",
+  "name": "day5-fs",
+  "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "copyfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "devinwang",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.3.3"
