--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# movive
+惊奇队长.BD.720p.中英双字幕的副本 2.mkv*
+惊奇队长.mkv*
+
 # Editor directories and files
 .idea
 .vscode
