--- a/buke/package.json
+++ b/buke/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "src-express",
+  "name": "buke",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "biji.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
-    "http-errors": "^1.7.3"
+    "jade": "^1.11.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
